resume points, success metrics, smooth scroll

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             <div class="card">
                 <h3>TrainTrace BKK</h3>
                 <ul>
-                    <li>Created an automated web scraping pipeline using to extract transit data from offcial BTS and MRT timetables.</li>
+                    <li>Built a Python script to extract 2,000+ data points from official BTS and MRT timetables.</li>
                     <li>Used obtained data to develop an app that tracked and optimized train routes, as well as calculated fare costs.</li>
-                    <li>App made with Flutter and Java / Scraper made with Python</li>
+                    <li>App made with Flutter and Java</li>
                 </ul>
             </div>
             <div class="card">
